--- a/Web.config
+++ b/Web.config
@@ -14,7 +14,7 @@
 
 
             <!-- *************************** -->            
-            <add key="DBconnstr_LOCAL"           value="Dsn=CCE_RAF_local_old2005driver;UID=dfsklar_CCR;PWD=hema2ma"/>
+            <add key="DBconnstr_LOCAL"           value="Dsn=CCE_RAF_local_old2005driver;UID=dfsklar_CCR;PWD=bloodize"/>
             <add key="DBconnstr_CLOUDLIVE"       value="Dsn=CCR_RAF_cloudlive_old2005driver;UID=dfsklar_CCR;PWD=ccezer0"/>
             <add key="DBconnstr_DINGSHELL"                 value="Dsn=CCR_RAF_dingshell;UID=guest;PWD=guest"/>
             <add key="DBconnstr"                 value="Dsn=CCE RAF Live;UID=dfsklarcce_raf_sv8_14MAR2010;PWD=ccezer0"/>
