A great deal of work over many years. Of special interest would be the new SafeDateTime mode in ITcodeAssignmentSet and a repair in DataHELPERS to try to make the database not be tarnished if a "new workspace" action timesout.

--- a/Web.config
+++ b/Web.config
@@ -1,124 +1,138 @@
 <?xml version="1.0"?>
 <configuration>
-	<!-- To retrieve: ConfigurationManager.AppSettings["DBconnstr"]) etc. -->
-	<configSections>
-		<sectionGroup name="system.web.extensions" type="System.Web.Configuration.SystemWebExtensionsSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
-			<sectionGroup name="scripting" type="System.Web.Configuration.ScriptingSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
-				<section name="scriptResourceHandler" type="System.Web.Configuration.ScriptingScriptResourceHandlerSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
-				<sectionGroup name="webServices" type="System.Web.Configuration.ScriptingWebServicesSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
-					<section name="jsonSerialization" type="System.Web.Configuration.ScriptingJsonSerializationSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="Everywhere"/>
-					<section name="profileService" type="System.Web.Configuration.ScriptingProfileServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
-					<section name="authenticationService" type="System.Web.Configuration.ScriptingAuthenticationServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
-					<section name="roleService" type="System.Web.Configuration.ScriptingRoleServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/></sectionGroup></sectionGroup></sectionGroup></configSections><appSettings>
-
-
-
-            <!-- *************************** -->            
-            <add key="DBconnstr_LOCAL"           value="Dsn=CCE_RAF_local_old2005driver;UID=dfsklar_CCR;PWD=bloodize"/>
-            <add key="DBconnstr_CLOUDLIVE"       value="Dsn=CCR_RAF_cloudlive_old2005driver;UID=dfsklar_CCR;PWD=ccezer0"/>
-            <add key="DBconnstr_DINGSHELL"                 value="Dsn=CCR_RAF_dingshell;UID=guest;PWD=guest"/>
-            <add key="DBconnstr"                 value="Dsn=CCE RAF Live;UID=dfsklarcce_raf_sv8_14MAR2010;PWD=ccezer0"/>
-            <add key="DBconnstr_LOCAL2"          value="Dsn=dingshell_driverSQLServer;UID=abc;PWD=abc"/>
-            <!-- password might also be blood dizeez or ccezer0 -->
-            <!-- *************************** -->            
-
-				
-
-            <add key="BOOLautoLoginDevel" value="1"/>
-		<add key="IPADDRopenOnlyTo" value="127.0.0.1"/>
-		<!-- 24.30.118.245 -->
-		<add key="IDsubprocessVisibleToALL" value="6"/>
-		<add key="IDsubprocessTrashcan" value="11"/>
-	</appSettings>
-
-
-	<connectionStrings>
-
-    <!-- CCE RAF Live -->
-		<add name="afwac_sv6ConnectionString"
-           connectionString="Data Source=208.81.130.2;Initial Catalog=dfsklarcce_raf_sv8_14MAR2010;Persist Security Info=True;User ID=dfsklarcce_raf_sv8_14MAR2010;Password=ccezer0" providerName="System.Data.SqlClient"/>
-
-		<add name="afwac_sv6ConnectionString___CCR_REMOTE"
-           connectionString="Data Source=ccetools.com;Initial Catalog=dfsklarcce_CCR_raf;Persist Security Info=True;User ID=dfsklar_CCR;Password=ccezer0" providerName="System.Data.SqlClient"/>
-
-	   <!-- DINGSHELL SQL 2005 -->
-		<add name="afwac_sv6ConnectionString___DINGSHELLsql2005"
-           connectionString="Data Source=DINGSHELL\SQLEXPRESS;Initial Catalog=NEW;Persist Security Info=True;User ID=guest;Password=guest" providerName="System.Data.SqlClient"/>
-
-		<!-- This local server is sql server 2008 so this ends up failing to be able to do inserts with NULL autocomputed IDs -->
-		<add name="afwac_sv6ConnectionString____LOCAL"      
-           connectionString="Data Source=DFSMBPRO\SQLEXPRESS;User ID=dfsklar_CCR;Password=;Initial Catalog=macbookpro_ccr_raf_08sep2011;Persist Security Info=True" providerName="System.Data.SqlClient"/>
-
-	</connectionStrings>
-
-  
+  <!-- To retrieve: ConfigurationManager.AppSettings["DBconnstr"]) etc. -->
+  <configSections>
+    <sectionGroup name="system.web.extensions" type="System.Web.Configuration.SystemWebExtensionsSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+      <sectionGroup name="scripting" type="System.Web.Configuration.ScriptingSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+        <section name="scriptResourceHandler" type="System.Web.Configuration.ScriptingScriptResourceHandlerSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
+        <sectionGroup name="webServices" type="System.Web.Configuration.ScriptingWebServicesSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+          <section name="jsonSerialization" type="System.Web.Configuration.ScriptingJsonSerializationSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="Everywhere"/>
+          <section name="profileService" type="System.Web.Configuration.ScriptingProfileServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
+          <section name="authenticationService" type="System.Web.Configuration.ScriptingAuthenticationServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
+          <section name="roleService" type="System.Web.Configuration.ScriptingRoleServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
+        </sectionGroup>
+      </sectionGroup>
+    </sectionGroup>
+  </configSections>
+  <appSettings>
+    <!-- *************************** -->
+    <add key="DBconnstr" value="Dsn=CCR_RAF_PROD_137;UID=_dfsklar;PWD=dfsklar"/>
+    <!-- PROD -->
+    <add key="DBconnstr_CLOUDLIVE" value="Dsn=CCR_RAF_cloudlive_old2005driver;UID=dfsklar_CCR;PWD=ccezer0"/>
+    <add key="DBconnstr_DINGSHELL" value="Dsn=CCR_RAF_dingshell;UID=guest;PWD=guest"/>
+    <add key="DBconnstr_PLANETSMB" value="Dsn=CCE RAF Live;UID=dfsklarcce_raf_sv8_14MAR2010;PWD=ccezer0"/>
+    <add key="DBconnstr_LOCAL2" value="Dsn=dingshell_driverSQLServer;UID=abc;PWD=abc"/>
+    <!-- LOCAL 2 -->
+    <!-- password might also be blood dizeez or ccezer0 -->
+    <!-- *************************** -->
+    <add key="BOOLautoLoginDevel" value="1"/>
+    <!-- <add key="IPADDRopenOnlyTo" value="127.0.0.1"/> -->
+    <!-- 24.30.118.245 -->
+    <add key="IDsubprocessVisibleToALL" value="6"/>
+    <add key="IDsubprocessTrashcan" value="11"/>
+  </appSettings>
+  <connectionStrings>
+    <!-- CCE RAF Live using a 3rd party (Planet Small Business?) SQL server -->
+    <add name="afwac_sv6ConnectionString___PLANETSMALLBUS" connectionString="Data Source=208.81.130.2;Initial Catalog=dfsklarcce_raf_sv8_14MAR2010;Persist Security Info=True;User ID=dfsklarcce_raf_sv8_14MAR2010;Password=ccezer0" providerName="System.Data.SqlClient"/>
+    <add name="afwac_sv6ConnectionString___CCR_REMOTE" connectionString="Data Source=ccetools.com;Initial Catalog=dfsklarcce_CCR_raf;Persist Security Info=True;User ID=dfsklar_CCR;Password=ccezer0" providerName="System.Data.SqlClient"/>
+    <!-- DINGSHELL SQL 2005 -->
+    <add name="afwac_sv6ConnectionString___DINGSHELLsql2005" connectionString="Data Source=DINGSHELL\SQLEXPRESS;Initial Catalog=NEW;Persist Security Info=True;User ID=guest;Password=guest" providerName="System.Data.SqlClient"/>
+    <!-- This local server is sql server 2008 so this ends up failing to be able to do inserts with NULL autocomputed IDs -->
+    <add name="afwac_sv6ConnectionString__LOCAL" connectionString="Data Source=DFSMBPRO\SQLEXPRESS;User ID=dfsklar_CCR;Password=;Initial Catalog=macbookpro_ccr_raf_08sep2011;Persist Security Info=True" providerName="System.Data.SqlClient"/>
+    <add name="afwac_sv6ConnectionString" connectionString="MultipleActiveResultSets=True;Data Source=etcbpsql137.naccrd.com;User ID=_dfsklar;Password=dfsklar;Initial Catalog=dfsklarcce_ccr_raf;Persist Security Info=True" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <!--
     <anonymousAuthentication enabled="true" userName="" defaultLogonDomain="" /> 
 -->
-	
   <!--
 <authorization>
   <allow users="*"/>
 </authorization>
 -->
-	<system.web>
-		<httpRuntime executionTimeout="5000" maxRequestLength="999999"/>
-		<sessionState mode="InProc"/>
-		<customErrors mode="Off"/>
-		<!-- <identity impersonate="true" password="V1ennaSB" userName="David" /> -->
-		<authorization>
-			<allow users="*"/>
-		</authorization>
-		<compilation debug="true" defaultLanguage="c#">
-			<assemblies>
-				<add assembly="System.Design, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
-				<add assembly="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-				<add assembly="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-				<add assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-				<add assembly="System.Xml.Linq, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-				<add assembly="System.Data.DataSetExtensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/></assemblies>
-		</compilation>
-		<pages>
-			<controls>
-				<add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-				<add tagPrefix="asp" namespace="System.Web.UI.WebControls" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/></controls></pages>
-		<httpHandlers>
-			<remove verb="*" path="*.asmx"/>
-			<add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-			<add verb="*" path="*_AppService.axd" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-			<add verb="GET,HEAD" path="ScriptResource.axd" validate="false" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/></httpHandlers>
-		<httpModules>
-			<add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/></httpModules></system.web>
-	<system.webServer>
-		<security>
-			<requestFiltering>
-				<requestLimits maxAllowedContentLength="100000"/>
-			</requestFiltering>
-		</security>
-		<directoryBrowse enabled="true"/>
-		<handlers accessPolicy="Read, Execute, Script">
-			<remove name="WebServiceHandlerFactory-Integrated"/>
-			<remove name="ScriptHandlerFactory"/>
-			<remove name="ScriptHandlerFactoryAppServices"/>
-			<remove name="ScriptResource"/><remove name="ASP NET"/>
-			<add name="ASP NET" path="*.aspxxxxxx" verb="*" type="System.Web.UI.Page, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" resourceType="Unspecified" requireAccess="Script" preCondition="integratedMode"/>
-			<add name="ScriptHandlerFactory" verb="*" path="*.asmx" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-			<add name="ScriptHandlerFactoryAppServices" verb="*" path="*_AppService.axd" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-			<add name="ScriptResource" verb="GET,HEAD" path="ScriptResource.axd" preCondition="integratedMode" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/></handlers>
-			<validation validateIntegratedModeConfiguration="false"/>
-		<modules>
-			<remove name="ScriptModule"/>
-			<add name="ScriptModule" preCondition="managedHandler" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/></modules></system.webServer>
-	<system.codedom>
-			<compilers>
-				<compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" warningLevel="4">
-					<providerOption name="CompilerVersion" value="v3.5"/>
-					<providerOption name="WarnAsError" value="false"/></compiler></compilers></system.codedom>
-	<runtime>
-		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1" appliesTo="v2.0.50727">
-			<dependentAssembly>
-				<assemblyIdentity name="System.Web.Extensions" publicKeyToken="31bf3856ad364e35"/>
-				<bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="3.5.0.0"/></dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="System.Web.Extensions.Design" publicKeyToken="31bf3856ad364e35"/>
-				<bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="3.5.0.0"/></dependentAssembly></assemblyBinding></runtime></configuration>
+  <system.web>
+    <httpRuntime executionTimeout="5000" maxRequestLength="999999"/>
+    <sessionState mode="InProc"/>
+    <customErrors mode="Off"/>
+    <authorization>
+      <allow users="*"/>
+    </authorization>
+    <!--
+    <compilation debug="true" defaultLanguage="c#" targetFramework="4.0">
+      <assemblies>
+        <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+        <add assembly="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+      </assemblies>
+    </compilation>
+     -->
+    <pages>
+      <controls>
+        <add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add tagPrefix="asp" namespace="System.Web.UI.WebControls" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+      </controls>
+    </pages>
+    <compilation debug="true">
+      <assemblies>
+        <add assembly="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+        <add assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add assembly="System.Xml.Linq, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+        <add assembly="System.Data.DataSetExtensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+      </assemblies>
+    </compilation>
+    <httpHandlers>
+      <remove verb="*" path="*.asmx"/>
+      <add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+      <add verb="*" path="*_AppService.axd" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+      <add verb="GET,HEAD" path="ScriptResource.axd" validate="false" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+    </httpHandlers>
+    <httpModules>
+      <add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+    </httpModules>
+  </system.web>
+  <system.webServer>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="100000"/>
+      </requestFiltering>
+    </security>
+    <directoryBrowse enabled="true"/>
+    <!--
+    <handlers accessPolicy="Read, Execute, Script">
+      <remove name="ASP NET"/>
+      <add name="ASP NET" path="*.aspx" verb="*" type="System.Web.UI.Page, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" resourceType="Unspecified" requireAccess="Script" preCondition="integratedMode"/>
+    </handlers> -->
+    <validation validateIntegratedModeConfiguration="false"/>
+    <modules>
+      <remove name="ScriptModule"/>
+      <add name="ScriptModule" preCondition="managedHandler" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+    </modules>
+    <handlers>
+      <remove name="WebServiceHandlerFactory-Integrated"/>
+      <remove name="ScriptHandlerFactory"/>
+      <remove name="ScriptHandlerFactoryAppServices"/>
+      <remove name="ScriptResource"/>
+      <add name="ScriptHandlerFactory" verb="*" path="*.asmx" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+      <add name="ScriptHandlerFactoryAppServices" verb="*" path="*_AppService.axd" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+      <add name="ScriptResource" verb="GET,HEAD" path="ScriptResource.axd" preCondition="integratedMode" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+    </handlers>
+  </system.webServer>
+  <system.codedom>
+    <compilers>
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" warningLevel="4">
+        <providerOption name="CompilerVersion" value="v3.5"/>
+        <providerOption name="WarnAsError" value="false"/>
+      </compiler>
+    </compilers>
+  </system.codedom>
+  <runtime>
+    <assemblyBinding appliesTo="v2.0.50727" xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Extensions" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="3.5.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Extensions.Design" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="3.5.0.0"/>
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+</configuration>
