Major changes to all the RISE-generated files. They were failing to handle the case of a shared connection being in the state of "Connecting" as opposed to Open/Closed.

--- a/Web.config
+++ b/Web.config
@@ -16,7 +16,7 @@
   </configSections>
   <appSettings>
     <!-- *************************** -->
-    <add key="DBconnstr" value="Dsn=CCR_RAF_PROD_137;UID=_dfsklar;PWD=dfsklar"/>
+    <add key="DBconnstr" value="Dsn=CCR_RAF_PROD_137;UID=_dfsklar;PWD=dfsklar;Mars_Connection=yes"/>
     <!-- PROD -->
     <add key="DBconnstr_CLOUDLIVE" value="Dsn=CCR_RAF_cloudlive_old2005driver;UID=dfsklar_CCR;PWD=ccezer0"/>
     <add key="DBconnstr_DINGSHELL" value="Dsn=CCR_RAF_dingshell;UID=guest;PWD=guest"/>
