--- a/COCACOLA-DEPLOYMENT-Feb14-2017/web.config
+++ b/COCACOLA-DEPLOYMENT-Feb14-2017/web.config
@@ -4,6 +4,7 @@
   
 <!-- Whenever the name of the database changes, the ODBC must be changed accordingly in the PlanetSB interface -->
   <appSettings>
+    <add key="DBconnstr" value="Dsn=CCR_RAF_PROD_32bit;UID=xxxxxxxxx;PWD=xxxxxxxxxxxxxxx;MultipleActiveResultSets=True;Mars_Connection=yes" />
     <add key="BOOLautoLoginDevel" value="0" />
     <add key="IDsubprocessVisibleToALL" value="6" />
     <add key="IDsubprocessTrashcan" value="11" />
@@ -13,6 +14,7 @@
 
   <connectionStrings>
     <!-- <add name="afwac_sv6ConnectionString_138" connectionString="MultipleActiveResultSets=True;Data Source=etcbpsql138.na.cokecce.com;Initial Catalog=dfsklarcce_ccr_raf;Persist Security Info=True;User ID=_dfsklar;Password=dfsklar" providerName="System.Data.SqlClient" /> -->
+    <add name="afwac_sv6ConnectionString" connectionString="MultipleActiveResultSets=True;Data Source=etcbpsql137;Initial Catalog=dfsklarcce_ccr_raf;Persist Security Info=True;User ID=xxxxxxxxxx;Password=xxxxxxxxxxx" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <system.web>
